# ArmoredWarfareAPI

./: .gitignore  LICENSE  README.MD  bad_credentials_client.json  cookies.json.gpg  pyproject.toml  requirements.txt  setup.py  test.py
.github/scripts/: decrypt_shell.sh
.github/workflows/: codeql-analysis.yml  python-package.yml
aw_api/: __init__.py  api.py  async_client.py  battalion.py  client.py  enums.py  exceptions.py  parser.py  player.py
aw_api/dataobjects/: __init__.py  player.py
docs/eng/: battalions.md  player_statistics.md
module_tests/: test_aw_api.py  test_aw_api_exceptions.py
test_module/: test_aw_api.py  test_aw_api_exceptions.py
