[tool.poetry]
name = "aw-api"
version = "2.0.3"
description = ""
authors = ["lookandhate <princessselestiapwnz@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
